--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
     <string name="app_name">Kyoto</string>
     <string name="title_home">Home</string>
+    <string name="title_resources">Resources</string>
+    <string name="title_buy_sell">Buy/Sell Books</string>
+    <string name="title_settings">Settings</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
